--- a/foodcalories/package.json
+++ b/foodcalories/package.json
@@ -13,7 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "chart.js": "^2.9.4",
+    "vue": "^2.5.2",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
