--- a/foodcalories/package.json
+++ b/foodcalories/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "chart.js": "^2.9.4",
     "vue": "^2.5.2",
-    "vue-chartjs": "^3.5.1"
+    "vue-chartjs": "^3.5.1",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
